--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -4,13 +4,16 @@
         <title>Graham Lalor portfolio</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
 
 
     <body>
+            <container>
         <header>
+                
             <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
-                    <a class="navbar-brand" href="#">Navbar</a>
+                    <a class="navbar-brand" href="#">Graham Lalor</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -39,15 +42,25 @@
                     </div>
                     </nav>
         </header>
-        <container>
-            <div class="alert alert-success col-sm-8">
-                Graham Lalor CV
+        
+            <div class="jumbotron jumbotron-fluid alert alert-success">
+                <div class="center">
+                    <h1 class="display-3"> Graham Lalor CV </h1>
+                    <div class="center">
+                        <img class="headShot" src="img_avatar.png" alt="Avatar">
+                    </div>
+                </div>
             </div>
             <div class="col-sm-4">
             </div>
-            <div class="LI-profile-badge col-sm-5"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="grahamlalor">
-                <a class="LI-simple-link" href='https://ie.linkedin.com/in/grahamlalor?trk=profile-badge'>Graham Lalor</a>
+            <div class="extraPages">           
+                <div class="LI-profile-badge col-sm-5"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="grahamlalor">
+                    <a class="LI-simple-link" href='https://ie.linkedin.com/in/grahamlalor?trk=profile-badge'>Graham Lalor</a>
+                </div>
             </div>
+
+
+            <footer class="navbar-dark bg-dark">Thanks</footer>
         </container>
 
 
