changed to light linked in badge

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -53,10 +53,18 @@
             </div>
             <div class="col-sm-4">
             </div>
-            <div class="extraPages">           
-                <div class="LI-profile-badge col-sm-5"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="grahamlalor">
+            <div class="extraPages row">           
+                <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="light" data-vanity="grahamlalor">
                     <a class="LI-simple-link" href='https://ie.linkedin.com/in/grahamlalor?trk=profile-badge'>Graham Lalor</a>
                 </div>
+                <div class="card" style="width: 250px;">
+                    <img class="card-img-top" src="hackerRank.png" alt="Card image cap">
+                    <div class="card-block">
+                      <h4 class="card-title">HackerRank</h4>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="https://www.hackerrank.com/grahamlalor" class="btn btn-success">HackerRank</a>
+                    </div>
+                  </div>
             </div>
 
 
