--- a/aboutMe.html
+++ b/aboutMe.html
@@ -20,42 +20,31 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Home
-                            <span class="sr-only">(current)</span>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home
+                            
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#AboutMe">About Me</a>
+                        <a class="nav-link active" href="AboutMe.html">About Me</a>
+                        <span class="sr-only">(current)</span>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#Projects">Projects </a>
+                        <a class="nav-link" href="projects.html">Projects </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Skills </a>
+                        <a class="nav-link" href="skills.html">Skills </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Experience </a>
+                        <a class="nav-link" href="experience.html">Experience </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact </a>
+                        <a class="nav-link" href="contact.html">Contact </a>
                     </li>
                 </ul>
             </div>
         </nav>
-        <div class="container-fluid main">
-        <div class="jumbotron jumbotron-fluid" style="height: 100%;">
-            <div class="center">
-                <h1 class="display-3"> Graham Lalor CV </h1>
-                <div class="center">
-                    <img class="headShot" src="img_avatar.png" alt="Avatar">
-                </div>
-                <button type="button" class="brn btn-primary">Download CV</button>
-                <button type="button" class="btn btn-primary">Contact Me</button>
-            </div>
-        </div>
-        <div class="col-sm-4">
-        </div>
+
         <div id="AboutMe">
             About Me
             <p>
@@ -76,43 +65,9 @@
                Anim id labore elit adipisicing ut in id occaecat pariatur ut ullamco ea tempor duis.
             </p>
         </div>
-        <div id="Projects">
-            Projects
-            <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
-                <li class="nav-item">
-                  <a class="nav-link" id="pills-home-tab" data-toggle="pill" href="#4thYear" role="tab" aria-controls="pills-home" aria-selected="true">4th Year</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#3rdYear" role="tab" aria-controls="pills-profile" aria-selected="false">3rd Year</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="#2ndYear" role="tab" aria-controls="pills-contact" aria-selected="false">2nd Year</a>
-                </li>
-              </ul>
-              <div class="tab-content" id="pills-tabContent">
-                <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">...</div>
-                <div id="3rdYear" class="tab-pane fade show active" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">sfdgds</div>
-                <div class="tab-pane fade show active" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">ffd</div>
-              </div>
-        </div>
-        <div class="row extraPages">
-            <div class="LI-profile-badge" data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="light"
-                data-vanity="grahamlalor">
-                <a class="LI-simple-link" href='https://ie.linkedin.com/in/grahamlalor?trk=profile-badge'>Graham Lalor</a>
-            </div>
-            <div class="card" style="width: 250px;">
-                <img class="card-img-top" src="hackerRank.png" alt="Card image cap">
-                <div class="card-block">
-                    <h4 class="card-title">HackerRank</h4>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="https://www.hackerrank.com/grahamlalor" class="btn btn-success">HackerRank</a>
-                </div>
-            </div>
-        </div>
-
-
+        
         <footer class="navbar-dark bg-dark">Thanks</footer>
-    </div>
+
 
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
