added cv and download link

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </div>
                 <div class="center">
                     <img class="headShot" src="img_avatar.png" alt="Avatar">
-                    <button type="button" class="brn btn-primary center">Download CV</button>
+                    <a href="GrahamLalorCV.docx" download="GrahamLalorCV" class="btn btn-primary center" role="button" >CV</a>
                     <button type="button" class="btn btn-primary center">Contact Me</button>
                 </div>
                 
