--- a/index.html
+++ b/index.html
@@ -244,17 +244,46 @@
                 </div>
               </div>
         </div>
-        <div class="row extraPages">
-            <div class="LI-profile-badge" data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="light"
-                data-vanity="grahamlalor">
-                <a class="LI-simple-link" href='https://ie.linkedin.com/in/grahamlalor?trk=profile-badge'>Graham Lalor</a>
+        <div class="panel panel-default">
+            <div class="panel-footer">
+                <div class="card-deck">
+                    <div class="card">
+                    <img class="card-img-top" src="java.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h4 class="card-title">Java</h4>
+                    </div>
+                    </div>
+                    <div class="card">
+                    <img class="card-img-top" src="python.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h4 class="card-title">Python</h4>
+                    </div>
+                    </div>
+                    <div class="card">
+                    <img class="card-img-top" src="c.jpg" alt="Card image cap">
+                    <div class="card-body">
+                        <h4 class="card-title">C#</h4>
+                    </div>
+                    </div>
+                </div>
             </div>
-            <div class="card" style="width: 250px;">
-                <img class="card-img-top" src="hackerRank.png" alt="Card image cap">
-                <div class="card-block">
-                    <h4 class="card-title">HackerRank</h4>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="https://www.hackerrank.com/grahamlalor" class="btn btn-success">HackerRank</a>
+        </div>
+
+        <div class="row extraPages">
+            <div class="card-deck">
+                <div class="card">
+                    <div class="LI-profile-badge" data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="light"
+                        data-vanity="grahamlalor">
+                        <a class="LI-simple-link" href='https://ie.linkedin.com/in/grahamlalor?trk=profile-badge'>Graham Lalor</a>
+                    </div>
+                </div>
+                <div class="card" style="width: 250px;">
+                    <img class="card-img-top" src="hackerRank.png" alt="Card image cap">
+                    <div class="card-block">
+                        <h4 class="card-title">HackerRank</h4>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="https://www.hackerrank.com/grahamlalor" class="btn btn-success">HackerRank</a>
+                    </div>
                 </div>
             </div>
         </div>
