--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     
-        <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark container-fluid">
+        <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark container-fluid" style="z-index: 1;">
             <a class="navbar-brand" href="#">Graham Lalor</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
                 aria-expanded="false" aria-label="Toggle navigation">
@@ -58,7 +58,8 @@
         </div>
         <div class="col-sm-4">
         </div>
-        <div id="AboutMe">
+        <div class="border border-primary">
+            <div id="AboutMe">
             About Me
             <p>
             Ad pariatur nostrud pariatur exercitation ipsum ipsum culpa mollit commodo mollit ex.
@@ -78,7 +79,8 @@
                Anim id labore elit adipisicing ut in id occaecat pariatur ut ullamco ea tempor duis.
             </p>
         </div>
-        <div id="Projects">
+        </div>
+        <div id="Projects" class="border border-success">
             Projects
             <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
                 <li class="nav-item">
@@ -244,29 +246,33 @@
                 </div>
               </div>
         </div>
-        <div class="panel panel-default">
-            <div class="panel-footer">
+        <div class="border border-dark">
                 <div class="card-deck">
-                    <div class="card">
-                    <img class="card-img-top" src="java.png" alt="Card image cap">
-                    <div class="card-body">
-                        <h4 class="card-title">Java</h4>
+                    <div class="card col-sm-3">
+                        <img class="card-img-top" src="java.png" alt="Card image cap">
+                        <div class="card-body">
+                            <h4 class="card-title">Java</h4>
+                        </div>
                     </div>
+                    <div class="card col-sm-3">
+                        <img class="card-img-top" src="python.png" alt="Card image cap">
+                        <div class="card-body">
+                            <h4 class="card-title">Python</h4>
+                        </div>
                     </div>
-                    <div class="card">
-                    <img class="card-img-top" src="python.png" alt="Card image cap">
-                    <div class="card-body">
-                        <h4 class="card-title">Python</h4>
+                    <div class="card col-sm-3">
+                        <img class="card-img-top" src="c.jpg" alt="Card image cap">
+                        <div class="card-body">
+                            <h4 class="card-title">C#</h4>
+                        </div>
                     </div>
-                    </div>
-                    <div class="card">
-                    <img class="card-img-top" src="c.jpg" alt="Card image cap">
-                    <div class="card-body">
-                        <h4 class="card-title">C#</h4>
-                    </div>
+                    <div class="card col-sm-3">
+                        <img class="card-img-top" src="cplusplus.png" alt="Card image cap">
+                        <div class="card-body">
+                            <h4 class="card-title">C++</h4>
+                        </div>
                     </div>
                 </div>
-            </div>
         </div>
 
         <div class="row extraPages">
