--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <title>Graham Lalor portfolio</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
         crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="mystyle.css">
 </head>
 
 
 <body>
     
-        <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark container-fluid" style="z-index: 1;">
+        <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark container-fluid">
             <a class="navbar-brand" href="#">Graham Lalor</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
                 aria-expanded="false" aria-label="Toggle navigation">
