added show more/show less

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
         crossorigin="anonymous">
-    
 </head>
 
 
@@ -247,30 +246,60 @@
                 </div>
               </div>
         </div>
-        <div class="border border-dark">
-                <div class="card-deck">
-                    <div class="card col-sm-3">
+        <button class="showMore btn btn-info">Show more</button>
+        <div class="skills border border-dark" style="height : 335px">
+                <div class="card-deck" id="bb" >
+                    <div class="card border-info col-sm-3">
                         <img class="card-img-top" src="java.png" alt="Card image cap">
                         <div class="card-body">
                             <h4 class="card-title">Java</h4>
                         </div>
                     </div>
-                    <div class="card col-sm-3">
+                    <div class="card border-info col-sm-3">
                         <img class="card-img-top" src="python.png" alt="Card image cap">
                         <div class="card-body">
                             <h4 class="card-title">Python</h4>
                         </div>
                     </div>
-                    <div class="card col-sm-3">
+                    <div class="card border-info col-sm-3">
                         <img class="card-img-top" src="c.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h4 class="card-title">C#</h4>
                         </div>
                     </div>
-                    <div class="card col-sm-3">
+                    <div class="card border-info col-sm-3">
                         <img class="card-img-top" src="cplusplus.png" alt="Card image cap">
                         <div class="card-body">
                             <h4 class="card-title">C++</h4>
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <div class="moreSkills" style="visibility:hidden;">
+                <div class="card-deck">
+                        <div class="card border-info col-sm-3">
+                            <img class="card-img-top" src="java.png" alt="Card image cap">
+                            <div class="card-body">
+                                <h4 class="card-title">Java</h4>
+                            </div>
+                        </div>
+                        <div class="card border-info col-sm-3">
+                            <img class="card-img-top" src="python.png" alt="Card image cap">
+                            <div class="card-body">
+                                <h4 class="card-title">Python</h4>
+                            </div>
+                        </div>
+                        <div class="card border-info col-sm-3">
+                            <img class="card-img-top" src="c.jpg" alt="Card image cap">
+                            <div class="card-body">
+                                <h4 class="card-title">C#</h4>
+                            </div>
+                        </div>
+                        <div class="card border-info col-sm-3">
+                            <img class="card-img-top" src="cplusplus.png" alt="Card image cap">
+                            <div class="card-body">
+                                <h4 class="card-title">C++</h4>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -400,6 +429,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
+    <script src="script.js" type="text/javascript"></script>
 </body>
 
 </html>
