--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
     </div>
     <div class="bgimg-3">
     </div>
-    <div class="skills" style="height : 450px">
+    <div class="skills">
         <h2 id="skills">Skills
             <button class="showMore btn btn-info">Show more</button>
         </h2>
@@ -486,7 +486,7 @@
             </div>
         </div>
         <br>
-        <div class="moreSkills" style="visibility:hidden;">
+        <div class="moreSkills" >
             <div class="card-deck">
                 <div class="card col-sm-3">
                     <img class="card-img-top" src="github.png" alt="Card image cap">
@@ -1075,8 +1075,7 @@
         </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
