added body div padding

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </div>
     <div class="col-sm-4">
     </div>
-    <div id="aboutMe" class="aboutMe">
+    <div id="aboutMe" class="aboutMe paddingDiv">
         <br>
         <br>
         <br>
@@ -97,7 +97,7 @@
     </div>
     <div class="paralax-1">
     </div>
-    <div id="grades" class="grades">
+    <div id="grades" class="grades paddingDiv">
         <br>
         <br>
         <br>
@@ -529,7 +529,7 @@
     </div>
     <div class="paralax-2">
     </div>
-    <div id="skills" class="skills">
+    <div id="skills" class="skills paddingDiv">
         <br>
         <br>
         <br>
@@ -651,7 +651,7 @@
         </div>-->
     <div class="paralax-3">
     </div>
-    <div class="projects border border-success">
+    <div class="projects border border-success paddingDiv">
         <br>
         <br>
         <br>
@@ -715,7 +715,7 @@
     </div>
     <div class="paralax-4">
     </div>
-    <div id="experience">
+    <div id="experience" class="paddingDiv">
         <h2>Experience</h2>
         <ul class="list-group">
             <li class="list-group-item">
