--- a/index.html
+++ b/index.html
@@ -805,15 +805,15 @@
                     <form>
                         <div class="form-group">
                             <label for="exampleFormControlInput1">Email address</label>
-                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com" required>
                         </div>
                         <div class="form-group">
                             <label for="exampleFormControlInput1">Subject</label>
-                            <input type="text" class="form-control" id="subject" placeholder="Subject">
+                            <input type="text" class="form-control" id="subject" placeholder="Subject" required>
                         </div>
                         <div class="form-group">
                             <label for="message">Message</label>
-                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="4" placeholder="Please type your message here..."></textarea>
+                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="4" placeholder="Please type your message here..." required></textarea>
                         </div>
                     </form>
                 </div>
