fixed scroll and git and linked in buttons

--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
     <div class="home jumbotron jumbotron-fluid">
         <div id="home-info" class="center">
             <div class="center">
-                <h1 class="name center">Graham Lalor</h1>
+                <h1 style="margin-left: 0.5em;" class="name center">Graham Lalor</h1>
             </div>
             <div class="center">
-                <h4 class="name center" style="margin-left: 7%;">Software Developer</h4>
+                <h4 class="name center" style="margin-left: 1.5em;">Software Developer</h4>
             </div>
             <div class="center">
                 <img class="headShot" src="img_avatar.png" alt="Avatar">
@@ -658,11 +658,11 @@
         </div>-->
     <div class="paralax-3">
     </div>
-    <div class="projects border border-success paddingDiv">
+    <div id="projects" class="projects paddingDiv">
         <br>
         <br>
         <br>
-        <h2 id="projects">Projects</h2>
+        <h2 >Projects</h2>
         <div id="accordion" role="tablist">
             <div class="card">
                 <div class="card-header" role="tab" id="headingOne">
@@ -741,6 +741,9 @@
     <div class="paralax-4">
     </div>
     <div id="experience" class="paddingDiv">
+            <br>
+            <br>
+            <br>
         <h2>Experience</h2>
         <ul class="list-group">
             <li class="list-group-item">
